[project]
name = "negotiation-env"
version = "1.0.0"
description = "A Multi-Issue Bilateral Negotiation RL Environment for LLM Post-Training"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "NegotiatorRL Team" }
]
keywords = ["reinforcement-learning", "negotiation", "llm", "openenv", "grpo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
# CLI entry points - use `uv run server` or `uv run tests`
server = "negotiation_env.cli:run_server"
test = "negotiation_env.cli:run_tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch configuration - tell it that the current directory IS the package
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "server/**/*.py",
    "openenv.yaml",
]

# PEP 735 dependency groups (modern uv syntax)
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
